updated the com.bric classes to the latest versions