@@ -1,21 +1,21 @@
 /*
  * @(#)ColorPicker.java
  *
- * $Date: 2010-01-03 15:01:13 +0100 (V, 03 jan. 2010) $
+ * $Date: 2014-06-06 20:04:49 +0200 (P, 06 jún. 2014) $
  *
- * Copyright (c) 2009 by Jeremy Wood.
+ * Copyright (c) 2011 by Jeremy Wood.
  * All rights reserved.
  *
- * The copyright of this software is owned by Jeremy Wood.
- * You may not use, copy or modify this software, except in
- * accordance with the license agreement you entered into with
+ * The copyright of this software is owned by Jeremy Wood. 
+ * You may not use, copy or modify this software, except in  
+ * accordance with the license agreement you entered into with  
  * Jeremy Wood. For details see accompanying license terms.
- *
+ * 
  * This software is probably, but not necessarily, discussed here:
- * http://javagraphics.blogspot.com/
- *
- * And the latest version should be available here:
- * https://javagraphics.dev.java.net/
+ * https://javagraphics.java.net/
+ * 
+ * That site should also contain the most recent official version
+ * of this software.  (See the SVN repository for more details.)
  */
 package com.bric.swing;
 
@@ -41,6 +41,7 @@ import javax.swing.JSpinner;
 import javax.swing.JTextField;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SwingUtilities;
+import javax.swing.Timer;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import javax.swing.event.DocumentEvent;
@@ -48,37 +49,44 @@ import javax.swing.event.DocumentListener;
 
 import com.bric.plaf.ColorPickerSliderUI;
 
-/** This is a panel that offers a robust set of controls to pick a color.
+/** <p>This is a panel that offers a robust set of controls to pick a color.
  * <P>This was originally intended to replace the <code>JColorChooser</code>.
  * To use this class to create a color choosing dialog, simply call:
  * <BR><code>ColorPicker.showDialog(frame, originalColor);</code>
- * <P>However this panel is also resizable, and it can exist in other contexts.
- * For example, you might try the following panel:
+ * <P>Here is a screenshot of the dialog that call will invoke:
+ * <br><IMG SRC="https://javagraphics.java.net/resources/colorpicker.png" alt="ColorPicker Screenshot">
+ * <p>However this does not have to invoked as a black-box color dialog. This class
+ * is simply a panel, and you can customize and resize it for other looks.
+ * For example, you might try the following panel:</p>
  * <BR><code>ColorPicker picker = new ColorPicker(false, false);</code>
  * <BR><code>picker.setPreferredSize(new Dimension(200,160));</code>
  * <BR><code>picker.setMode(ColorPicker.HUE);</code>
+ * <br><IMG SRC="https://javagraphics.java.net/resources/colorpicker3.png" alt="ColorPicker Small Screenshot">
  * <P>This will create a miniature color picker that still lets the user choose
  * from every available color, but it does not include all the buttons and
- * numeric controls on the right side of the panel.  This might be ideal if you
+ * numeric controls on the right side of the panel. This might be ideal if you
  * are working with limited space, or non-power-users who don't need the
- * RGB values of a color.  The <code>main()</code> method of this class demonstrates
- * possible ways you can customize a <code>ColorPicker</code> component.
+ * RGB values of a color.
  * <P>To listen to color changes to this panel, you can add a <code>PropertyChangeListener</code>
- * listening for changes to the <code>SELECTED_COLOR_PROPERTY</code>.  This will be triggered only
+ * listening for changes to the <code>SELECTED_COLOR_PROPERTY</code>. This will be triggered only
  * when the RGB value of the selected color changes.
- * <P>To listen to opacity changes to this panel, use a <code>PropertyChangeListener</code> listening
+ * <P>To listen to opacity changes to this panel, use 
+ * a <code>PropertyChangeListener</code> listening
  * for changes to the <code>OPACITY_PROPERTY</code>.
- *
+ * 
+ * @see com.bric.swing.ColorPickerDialog
+ * @see com.bric.swing.ColorPickerPanel
+ * 
  */
 public class ColorPicker extends JPanel {
 	private static final long serialVersionUID = 3L;
-
+	
 	/** The localized strings used in this (and related) panel(s). */
 	protected static ResourceBundle strings = ResourceBundle.getBundle("com.bric.swing.resources.ColorPicker");
-
+	
 	/** This creates a modal dialog prompting the user to select a color.
 	 * <P>This uses a generic dialog title: "Choose a Color", and does not include opacity.
-	 *
+	 * 
 	 * @param owner the dialog this new dialog belongs to.  This must be a Frame or a Dialog.
 	 * Java 1.6 supports Windows here, but this package is designed/compiled to work in Java 1.4,
 	 * so an <code>IllegalArgumentException</code> will be thrown if this component is a <code>Window</code>.
@@ -88,10 +96,10 @@ public class ColorPicker extends JPanel {
 	public static Color showDialog(Window owner,Color originalColor) {
 		return showDialog(owner, null, originalColor, false );
 	}
-
+	
 	/** This creates a modal dialog prompting the user to select a color.
 	 * <P>This uses a generic dialog title: "Choose a Color".
-	 *
+	 * 
 	 * @param owner the dialog this new dialog belongs to.  This must be a Frame or a Dialog.
 	 * Java 1.6 supports Windows here, but this package is designed/compiled to work in Java 1.4,
 	 * so an <code>IllegalArgumentException</code> will be thrown if this component is a <code>Window</code>.
@@ -104,7 +112,7 @@ public class ColorPicker extends JPanel {
 	}
 
 	/** This creates a modal dialog prompting the user to select a color.
-	 *
+	 * 
 	 * @param owner the dialog this new dialog belongs to.  This must be a Frame or a Dialog.
 	 * Java 1.6 supports Windows here, but this package is designed/compiled to work in Java 1.4,
 	 * so an <code>IllegalArgumentException</code> will be thrown if this component is a <code>Window</code>.
@@ -122,9 +130,9 @@ public class ColorPicker extends JPanel {
 		} else {
 			throw new IllegalArgumentException("the owner ("+owner.getClass().getName()+") must be a java.awt.Frame or a java.awt.Dialog");
 		}
-
-		d.setTitle(title == null ?
-                    strings.getObject("ColorPickerDialogTitle").toString() :
+		
+		d.setTitle(title == null ? 
+                    strings.getObject("ColorPickerDialogTitle").toString() : 
                     title);
 		d.pack();
 		d.setVisible(true);
@@ -137,7 +145,7 @@ public class ColorPicker extends JPanel {
 	 * that the change from HSB(0,0,0) to HSB(.4,0,0) will <i>not</i> generate events, because when the
 	 * brightness stays zero the RGB color remains (0,0,0).  So although the hue moved around, the color
 	 * is still black, so no events are created.)
-	 *
+	 * 
 	 */
 	public static final String SELECTED_COLOR_PROPERTY = "selected color";
 
@@ -145,17 +153,17 @@ public class ColorPicker extends JPanel {
 	 * is called.
 	 */
 	public static final String MODE_CONTROLS_VISIBLE_PROPERTY = "mode controls visible";
-
+	
 	/** <code>PropertyChangeEvents</code> will be triggered when the opacity value is
 	 * adjusted.
 	 */
 	public static final String OPACITY_PROPERTY = "opacity";
-
+	
 	/** <code>PropertyChangeEvents</code> will be triggered when the mode changes.
 	 * (That is, when the wheel switches from HUE, SAT, BRI, RED, GREEN, or BLUE modes.)
 	 */
 	public static final String MODE_PROPERTY = "mode";
-
+	
 	/** Used to indicate when we're in "hue mode". */
 	public static final int HUE = 0;
 	/** Used to indicate when we're in "brightness mode". */
@@ -168,14 +176,14 @@ public class ColorPicker extends JPanel {
 	public static final int GREEN = 4;
 	/** Used to indicate when we're in "blue mode". */
 	public static final int BLUE = 5;
-
+	
 	/** The vertical slider */
 	private JSlider slider = new JSlider(JSlider.VERTICAL,0,100,0);
-
+	
 	private int currentRed = 0;
 	private int currentGreen = 0;
 	private int currentBlue = 0;
-
+	
 	ChangeListener changeListener = new ChangeListener() {
 		public void stateChanged(ChangeEvent e) {
 			Object src = e.getSource();
@@ -183,21 +191,21 @@ public class ColorPicker extends JPanel {
 			if(hue.contains(src) || sat.contains(src) || bri.contains(src)) {
 				if(adjustingSpinners>0)
 					return;
-
+				
 				setHSB( hue.getFloatValue()/360f,
 						sat.getFloatValue()/100f,
 						bri.getFloatValue()/100f );
 			} else if(red.contains(src) || green.contains(src) || blue.contains(src)) {
 				if(adjustingSpinners>0)
 					return;
-
+				
 				setRGB( red.getIntValue(),
 						green.getIntValue(),
 						blue.getIntValue() );
 			} else if(src==colorPanel) {
 				if(adjustingColorPanel>0)
 					return;
-
+				
 				int mode = getMode();
 				if(mode==HUE || mode==BRI || mode==SAT) {
 					float[] hsb = colorPanel.getHSB();
@@ -209,7 +217,7 @@ public class ColorPicker extends JPanel {
 			} else if(src==slider) {
 				if(adjustingSlider>0)
 					return;
-
+				
 				int v = slider.getValue();
 				Option option = getSelectedOption();
 				option.setValue(v);
@@ -220,12 +228,12 @@ public class ColorPicker extends JPanel {
 				setOpacity( v );
 			} else if(src==opacitySlider) {
 				if(adjustingOpacity>0) return;
-
+				
 				setOpacity( opacitySlider.getValue() );
 			}
 		}
 	};
-
+	
 	ActionListener actionListener = new ActionListener() {
 		public void actionPerformed(ActionEvent e) {
 			Object src = e.getSource();
@@ -244,7 +252,7 @@ public class ColorPicker extends JPanel {
 			}
 		}
 	};
-
+	
 	/** @return the currently selected <code>Option</code>
 	 */
 	private Option getSelectedOption() {
@@ -264,100 +272,108 @@ public class ColorPicker extends JPanel {
 		}
 	}
 
-	/** This thread will wait a second or two before committing the text in
-	 * the hex TextField.  This gives the user a chance to finish typing...
-	 * but if the user is just waiting for something to happen, this makes sure
-	 * after a second or two something happens.
-	 */
-	class HexUpdateThread extends Thread {
-		long myStamp;
-		String text;
+	HexDocumentListener hexDocListener = new HexDocumentListener();
 
-		public HexUpdateThread(long stamp,String s) {
-			myStamp = stamp;
-			text = s;
+	class SetRGBRunnable implements Runnable {
+		final int red, green, blue;
+		
+		SetRGBRunnable(int red,int green,int blue) {
+			this.red = red;
+			this.green = green;
+			this.blue = blue;
 		}
-
+		
 		public void run() {
-			if(SwingUtilities.isEventDispatchThread()==false) {
-				long WAIT = 1500;
-
-				while(System.currentTimeMillis()-myStamp<WAIT) {
-					try {
-						long delay = WAIT - (System.currentTimeMillis()-myStamp);
-						if(delay<1) delay = 1;
-						Thread.sleep( delay );
-					} catch(Exception e) {
-						Thread.yield();
-					}
-				}
-				SwingUtilities.invokeLater(this);
-				return;
-			}
-
-			if(myStamp!=hexDocListener.lastTimeStamp) {
-				//another event has come along and trumped this one
-				return;
-			}
-
-			if(text.length()>6)
-				text = text.substring(0,6);
-			while(text.length()<6) {
-				text = text+"0";
-			}
-			if(hexField.getText().equals(text))
-				return;
-
 			int pos = hexField.getCaretPosition();
-			hexField.setText(text);
+			setRGB(red, green, blue);
+			pos = Math.min(pos, hexField.getText().length());
 			hexField.setCaretPosition(pos);
 		}
 	}
-
-	HexDocumentListener hexDocListener = new HexDocumentListener();
-
+	
 	class HexDocumentListener implements DocumentListener {
-		long lastTimeStamp;
 
+		/* The delay (in ms) to commit text that might not be finished.
+		 * 
+		 */
+		int DELAY = 1500;
+		String uncommittedText = null;
+		
+		Timer delayedUpdater = new Timer(DELAY, new ActionListener() {
+			public void actionPerformed(ActionEvent e) {
+				if(uncommittedText!=null) {
+					int pos = hexField.getCaretPosition();
+					pos = Math.min(pos, uncommittedText.length());
+					hexField.setText(uncommittedText);
+					hexField.setCaretPosition(pos);
+				}
+			}
+		});
+		
 		public void changedUpdate(DocumentEvent e) {
-			lastTimeStamp = System.currentTimeMillis();
-
 			if(adjustingHexField>0)
 				return;
-
+			
 			String s = hexField.getText();
-			s = stripToHex(s);
-			if(s.length()==6) {
-				//the user typed 6 digits: we can work with this:
-				try {
-					int i = Integer.parseInt(s,16);
-					setRGB( ((i >> 16) & 0xff), ((i >> 8) & 0xff), ((i) & 0xff) );
-					return;
-				} catch(NumberFormatException e2) {
-					//this shouldn't happen, since we already stripped out non-hex characters.
-					e2.printStackTrace();
+			s = stripToHex(s, 6);
+			
+			/* If we don't have 6 characters, then use a delay.
+			 * If, after a second or two, the user has just
+			 * stopped typing: then we can try to make
+			 * sense of what they input even if its
+			 * incomplete.
+			 */
+			boolean delay = false;
+			if(s.length()<6) {
+				delay = true;
+				while(s.length()<6) {
+					s = s+"0";
 				}
 			}
-			Thread thread = new HexUpdateThread(lastTimeStamp,s);
-			thread.start();
-			while(System.currentTimeMillis()-lastTimeStamp==0) {
-				Thread.yield();
+			
+			try {
+				int i = Integer.parseInt(s,16);
+				int red = ((i >> 16) & 0xff);
+				int green = ((i >> 8) & 0xff);
+				int blue = ((i) & 0xff);
+				
+				if(delay) {
+					delayedUpdater.setRepeats(false);
+					delayedUpdater.restart();
+					uncommittedText = s;
+				} else {
+					delayedUpdater.stop();
+					
+					/* Be sure to invoke this separately, otherwise we'll risk getting
+					 * a "attempt to mutate in notification".
+					 * ( https://java.net/jira/browse/JAVAGRAPHICS-19 )
+					 */
+					SwingUtilities.invokeLater(new SetRGBRunnable(red, green, blue));
+					uncommittedText = null;
+				}
+				return;
+			} catch(NumberFormatException e2) {
+				//this shouldn't happen, since we already stripped out non-hex characters.
+				e2.printStackTrace();
 			}
 		}
-
-		/** Strips a string down to only uppercase hex-supported characters. */
-		private String stripToHex(String s) {
+		
+		/** Strips a string down to only uppercase hex-supported characters.
+		 * @param s the string to strip
+		 * @param charLimit the maximum number of characters in the return value
+		 * @return an uppercase version of <code>s</code> that only includes hexadecimal
+		 * characters and is not longer than <code>charLimit</code>. 
+		 */
+		private String stripToHex(String s,int charLimit) {
 			s = s.toUpperCase();
-			String s2 = "";
-			for(int a = 0; a<s.length(); a++) {
+			StringBuffer returnValue = new StringBuffer(6);
+			for(int a = 0; a<s.length() && returnValue.length()<charLimit; a++) {
 				char c = s.charAt(a);
-				if(c=='0' || c=='1' || c=='2' || c=='3' || c=='4' || c=='5' ||
-						c=='6' || c=='7' || c=='8' || c=='9' ||
-						c=='A' || c=='B' || c=='C' || c=='D' || c=='E' || c=='F') {
-					s2 = s2+c;
+				if(Character.isDigit(c) || (c>='A' && c<='F')) {
+					returnValue.append(c);
 				}
 			}
-			return s2;
+			return returnValue.toString();
 		}
 
 		public void insertUpdate(DocumentEvent e) {
@@ -379,7 +395,7 @@ public class ColorPicker extends JPanel {
 	private ColorSwatch preview = new ColorSwatch(50);
 	private JLabel hexLabel = new JLabel(strings.getObject("hexLabel").toString());
 	private JTextField hexField = new JTextField("000000");
-
+	
 	/** Used to indicate when we're internally adjusting the value of the spinners.
 	 * If this equals zero, then incoming events are triggered by the user and must be processed.
 	 * If this is not equal to zero, then incoming events are triggered by another method
@@ -414,24 +430,24 @@ public class ColorPicker extends JPanel {
 	 * that's already responding to the user's actions.
 	 */
 	private int adjustingOpacity = 0;
-
+	
 	/** The "expert" controls are the controls on the right side
 	 * of this panel: the labels/spinners/radio buttons.
 	 */
 	private JPanel expertControls = new JPanel(new GridBagLayout());
-
+	
 	private ColorPickerPanel colorPanel = new ColorPickerPanel();
-
+	
 	private JSlider opacitySlider = new JSlider(0,255,255);
 	private JLabel opacityLabel = new JLabel(strings.getObject("opacityLabel").toString());
-
+	
 	/** Create a new <code>ColorPicker</code> with all controls visible except opacity. */
 	public ColorPicker() {
 		this(true,false);
 	}
-
+	
 	/** Create a new <code>ColorPicker</code>.
-	 *
+	 * 
 	 * @param showExpertControls the labels/spinners/buttons on the right side of a
 	 * <code>ColorPicker</code> are optional.  This boolean will control whether they
 	 * are shown or not.
@@ -442,19 +458,19 @@ public class ColorPicker extends JPanel {
 	public ColorPicker(boolean showExpertControls,boolean includeOpacity) {
 		super(new GridBagLayout());
 		GridBagConstraints c = new GridBagConstraints();
-
+		
 		Insets normalInsets = new Insets(3,3,3,3);
-
+		
 		JPanel options = new JPanel(new GridBagLayout());
 		c.gridx = 0; c.gridy = 0; c.weightx = 1; c.weighty = 1;
 		c.insets = normalInsets;
 		ButtonGroup bg = new ButtonGroup();
-
+		
 		//put them in order
 		Option[] optionsArray = new Option[] {
 				hue, sat, bri, red, green, blue
 		};
-
+		
 		for(int a = 0; a<optionsArray.length; a++) {
 			if(a==3 || a==6) {
 				c.insets = new Insets(normalInsets.top+10,normalInsets.left,normalInsets.bottom,normalInsets.right);
@@ -490,23 +506,23 @@ public class ColorPicker extends JPanel {
 		c.gridx++;
 		c.anchor = GridBagConstraints.WEST; c.fill = GridBagConstraints.HORIZONTAL;
 		options.add(alpha.spinner,c);
-
+		
 		c.gridx = 0; c.gridy = 0; c.weightx = 1;
 		c.weighty = 1; c.fill = GridBagConstraints.BOTH;
 		c.anchor = GridBagConstraints.CENTER; c.insets = normalInsets;
 		c.gridwidth = 2;
 		add(colorPanel,c);
-
+		
 		c.gridwidth = 1;
 		c.insets = normalInsets;
 		c.gridx+=2; c.weighty = 1; c.gridwidth = 1;
 		c.fill = GridBagConstraints.VERTICAL; c.weightx = 0;
 		add(slider,c);
-
+		
 		c.gridx++; c.fill = GridBagConstraints.VERTICAL; c.gridheight = GridBagConstraints.REMAINDER;
 		c.anchor = GridBagConstraints.CENTER; c.insets = new Insets(0,0,0,0);
 		add(expertControls,c);
-
+		
 		c.gridx = 0; c.gridheight = 1;
 		c.gridy = 1; c.weightx = 0; c.weighty = 0;
 		c.insets = normalInsets; c.anchor = GridBagConstraints.CENTER;
@@ -514,22 +530,22 @@ public class ColorPicker extends JPanel {
 		c.gridx++; c.gridwidth = 2;
 		c.weightx = 1; c.fill = GridBagConstraints.HORIZONTAL;
 		add(opacitySlider,c);
-
+		
 		c.gridx = 0; c.gridy = 0;
 		c.gridheight = 1; c.gridwidth = 1;
-		c.fill = GridBagConstraints.BOTH;
-		c.weighty = 1; c.anchor = GridBagConstraints.CENTER;
+		c.fill = GridBagConstraints.BOTH; 
+		c.weighty = 1; c.anchor = GridBagConstraints.CENTER; 
 		c.weightx = 1;
 		c.insets = new Insets(normalInsets.top,normalInsets.left+8,normalInsets.bottom+10,normalInsets.right+8);
 		expertControls.add(preview,c);
 		c.gridy++; c.weighty = 0; c.anchor = GridBagConstraints.CENTER;
 		c.insets = new Insets(normalInsets.top,normalInsets.left,0,normalInsets.right);
 		expertControls.add(options,c);
-
+		
 		preview.setOpaque(true);
-		colorPanel.setPreferredSize(new Dimension(expertControls.getPreferredSize().height,
+		colorPanel.setPreferredSize(new Dimension(expertControls.getPreferredSize().height, 
 												expertControls.getPreferredSize().height));
-
+		
 		slider.addChangeListener(changeListener);
 		colorPanel.addChangeListener(changeListener);
 		slider.setUI(new ColorPickerSliderUI(slider,this));
@@ -537,31 +553,31 @@ public class ColorPicker extends JPanel {
 		setMode(BRI);
 
 		setExpertControlsVisible(showExpertControls);
-
+		
 		setOpacityVisible(includeOpacity);
-
+		
 		opacitySlider.addChangeListener(changeListener);
-
+		
 		setOpacity( 255 );
 		setOpaque(this,false);
-
+		
 		preview.setForeground( getColor() );
 	}
-
+	
 	private static void setOpaque(JComponent jc,boolean opaque) {
 		if(jc instanceof JTextField)
 			return;
-
+		
 		jc.setOpaque(false);
 		if(jc instanceof JSpinner)
 			return;
-
+		
 		for(int a = 0; a<jc.getComponentCount(); a++) {
 			JComponent child = (JComponent)jc.getComponent(a);
 			setOpaque(child,opaque);
 		}
 	}
-
+	
 	/** This controls whether the hex field (and label) are visible or not.
 	 * <P>Note this lives inside the "expert controls", so if <code>setExpertControlsVisible(false)</code>
 	 * has been called, then calling this method makes no difference: the hex controls will be hidden.
@@ -578,21 +594,21 @@ public class ColorPicker extends JPanel {
 	public void setPreviewSwatchVisible(boolean b) {
 		preview.setVisible(b);
 	}
-
+	
 	/** The labels/spinners/buttons on the right side of a <code>ColorPicker</code>
 	 * are optional.  This method will control whether they are shown or not.
 	 * <P>It may be that your users will never need or want numeric control when
 	 * they choose their colors, so hiding this may simplify your interface.
-	 *
+	 * 
 	 * @param b whether to show or hide the expert controls.
 	 */
 	public void setExpertControlsVisible(boolean b) {
 		expertControls.setVisible(b);
 	}
-
+	
 	/** @return the current HSB coordinates of this <code>ColorPicker</code>.
 	 * Each value is between [0,1].
-	 *
+	 * 
 	 */
 	public float[] getHSB() {
 		return new float[] {
@@ -604,7 +620,7 @@ public class ColorPicker extends JPanel {
 
 	/** @return the current RGB coordinates of this <code>ColorPicker</code>.
 	 * Each value is between [0,255].
-	 *
+	 * 
 	 */
 	public int[] getRGB() {
 		return new int[] {
@@ -613,28 +629,28 @@ public class ColorPicker extends JPanel {
 				currentBlue
 		};
 	}
-
-	/** Returns the currently selected opacity (a float between 0 and 1).
-	 *
+	
+	/** Returns the currently selected opacity (a float between 0 and 1). 
+	 * 
 	 * @return the currently selected opacity (a float between 0 and 1).
 	 */
 	public float getOpacity() {
-		return ((float)opacitySlider.getValue())/255f;
+		return (opacitySlider.getValue())/255f;
 	}
-
+	
 	private int lastOpacity = 255;
-
+	
 	/** Sets the currently selected opacity.
-	 *
+	 * 
 	 * @param v an int between 0 and 255.
 	 */
 	public void setOpacity(int v) {
-		if(v<0 || v>255)
+		if(v<0 || v>255) 
 			throw new IllegalArgumentException("The opacity ("+v+") must be between 0 and 255.");
 		adjustingOpacity++;
 		try {
 			opacitySlider.setValue( v );
-			alpha.spinner.setValue(v );
+			alpha.spinner.setValue( new Integer(v) );
 			if(lastOpacity!=v) {
 				firePropertyChange(OPACITY_PROPERTY,new Integer(lastOpacity),new Integer(v));
 				Color c = preview.getForeground();
@@ -645,11 +661,11 @@ public class ColorPicker extends JPanel {
 			adjustingOpacity--;
 		}
 	}
-
+	
 	/** Sets the mode of this <code>ColorPicker</code>.
 	 * This is especially useful if this picker is in non-expert mode, so
 	 * the radio buttons are not visible for the user to directly select.
-	 *
+	 * 
 	 * @param mode must be HUE, SAT, BRI, RED, GREEN or BLUE.
 	 */
 	public void setMode(int mode) {
@@ -673,7 +689,7 @@ public class ColorPicker extends JPanel {
 			slider.setMaximum(max);
 			slider.setValue( option.getIntValue() );
 			slider.repaint();
-
+			
 			if(mode==HUE || mode==SAT || mode==BRI) {
 				setHSB( hue.getFloatValue()/360f,
 						sat.getFloatValue()/100f,
@@ -682,18 +698,18 @@ public class ColorPicker extends JPanel {
 				setRGB( red.getIntValue(),
 						green.getIntValue(),
 						blue.getIntValue() );
-
+				
 			}
 		} finally {
 			adjustingSlider--;
 		}
 	}
-
+	
 	/** This controls whether the radio buttons that adjust the mode are visible.
 	 * <P>(These buttons appear next to the spinners in the expert controls.)
 	 * <P>Note these live inside the "expert controls", so if <code>setExpertControlsVisible(false)</code>
 	 * has been called, then these will never be visible.
-	 *
+	 * 
 	 * @param b
 	 */
 	public void setModeControlsVisible(boolean b) {
@@ -703,11 +719,11 @@ public class ColorPicker extends JPanel {
 		red.radioButton.setVisible(b && red.isVisible());
 		green.radioButton.setVisible(b && green.isVisible());
 		blue.radioButton.setVisible(b && blue.isVisible());
-		putClientProperty(MODE_CONTROLS_VISIBLE_PROPERTY,  Boolean.valueOf(b));
+		putClientProperty(MODE_CONTROLS_VISIBLE_PROPERTY,new Boolean(b));
 	}
-
+	
 	/** @return the current mode of this <code>ColorPicker</code>.
-	 * <BR>This will return <code>HUE</code>,  <code>SAT</code>,  <code>BRI</code>,
+	 * <BR>This will return <code>HUE</code>,  <code>SAT</code>,  <code>BRI</code>, 
 	 * <code>RED</code>,  <code>GREEN</code>, or <code>BLUE</code>.
 	 * <P>The default mode is <code>BRI</code>, because that provides the most
 	 * aesthetic/recognizable color wheel.
@@ -726,9 +742,9 @@ public class ColorPicker extends JPanel {
 		setRGB(c.getRed(),c.getGreen(),c.getBlue());
 		setOpacity(c.getAlpha());
 	}
-
+	
 	/** Sets the current color of this <code>ColorPicker</code>
-	 *
+	 * 
 	 * @param r the red value.  Must be between [0,255].
 	 * @param g the green value.  Must be between [0,255].
 	 * @param b the blue value.  Must be between [0,255].
@@ -740,11 +756,11 @@ public class ColorPicker extends JPanel {
 			throw new IllegalArgumentException("The green value ("+g+") must be between [0,255].");
 		if(b<0 || b>255)
 			throw new IllegalArgumentException("The blue value ("+b+") must be between [0,255].");
-
+		
 		Color lastColor = getColor();
-
+		
 		boolean updateRGBSpinners = adjustingSpinners==0;
-
+		
 		adjustingSpinners++;
 		adjustingColorPanel++;
 		int alpha = this.alpha.getIntValue();
@@ -774,7 +790,7 @@ public class ColorPicker extends JPanel {
 		if(lastColor.equals(newColor)==false)
 			firePropertyChange(SELECTED_COLOR_PROPERTY,lastColor,newColor);
 	}
-
+	
 	/** @return the current <code>Color</code> this <code>ColorPicker</code> has selected.
 	 * <P>This is equivalent to:
 	 * <BR><code>int[] i = getRGB();</code>
@@ -784,7 +800,7 @@ public class ColorPicker extends JPanel {
 		int[] i = getRGB();
 		return new Color(i[0], i[1], i[2], opacitySlider.getValue());
 	}
-
+	
 	private void updateSlider() {
 		adjustingSlider++;
 		try {
@@ -807,7 +823,7 @@ public class ColorPicker extends JPanel {
 		}
 		slider.repaint();
 	}
-
+	
 	/** This returns the panel with several rows of spinner controls.
 	 * <P>Note you can also call methods such as <code>setRGBControlsVisible()</code> to adjust
 	 * which controls are showing.
@@ -818,11 +834,11 @@ public class ColorPicker extends JPanel {
 	public JPanel getExpertControls() {
 		return expertControls;
 	}
-
+	
 	/** This shows or hides the RGB spinner controls.
 	 * <P>Note these live inside the "expert controls", so if <code>setExpertControlsVisible(false)</code>
 	 * has been called, then calling this method makes no difference: the RGB controls will be hidden.
-	 *
+	 * 
 	 * @param b whether the controls should be visible or not.
 	 */
 	public void setRGBControlsVisible(boolean b) {
@@ -834,7 +850,7 @@ public class ColorPicker extends JPanel {
 	/** This shows or hides the HSB spinner controls.
 	 * <P>Note these live inside the "expert controls", so if <code>setExpertControlsVisible(false)</code>
 	 * has been called, then calling this method makes no difference: the HSB controls will be hidden.
-	 *
+	 * 
 	 * @param b whether the controls should be visible or not.
 	 */
 	public void setHSBControlsVisible(boolean b) {
@@ -855,14 +871,14 @@ public class ColorPicker extends JPanel {
 		alpha.label.setVisible(b);
 		alpha.spinner.setVisible(b);
 	}
-
+	
 	/** @return the <code>ColorPickerPanel</code> this <code>ColorPicker</code> displays. */
 	public ColorPickerPanel getColorPanel() {
 		return colorPanel;
 	}
 
 	/** Sets the current color of this <code>ColorPicker</code>
-	 *
+	 * 
 	 * @param h the hue value.
 	 * @param s the saturation value.  Must be between [0,1].
 	 * @param b the blue value.  Must be between [0,1].
@@ -873,14 +889,14 @@ public class ColorPicker extends JPanel {
 		//hue is cyclic, so it can be any value:
 		while(h<0) h++;
 		while(h>1) h--;
-
+		
 		if(s<0 || s>1)
 			throw new IllegalArgumentException("The saturation value ("+s+") must be between [0,1]");
 		if(b<0 || b>1)
 			throw new IllegalArgumentException("The brightness value ("+b+") must be between [0,1]");
-
+		
 		Color lastColor = getColor();
-
+		
 		boolean updateHSBSpinners = adjustingSpinners==0;
 		adjustingSpinners++;
 		adjustingColorPanel++;
@@ -890,7 +906,7 @@ public class ColorPicker extends JPanel {
 				sat.setValue( (int)(s*100f+.49f));
 				bri.setValue( (int)(b*100f+.49f));
 			}
-
+			
 			Color c = new Color(Color.HSBtoRGB(h, s, b));
 			int alpha = this.alpha.getIntValue();
 			c = new Color(c.getRed(), c.getGreen(), c.getBlue(), alpha);
@@ -913,14 +929,14 @@ public class ColorPicker extends JPanel {
 		if(lastColor.equals(newColor)==false)
 			firePropertyChange(SELECTED_COLOR_PROPERTY,lastColor,newColor);
 	}
-
+	
 	private void updateHexField() {
 		adjustingHexField++;
 		try {
 			int r = red.getIntValue();
 			int g = green.getIntValue();
 			int b = blue.getIntValue();
-
+			
 			int i = (r << 16) + (g << 8) +b;
 			String s = Integer.toHexString(i).toUpperCase();
 			while(s.length()<6)
@@ -940,7 +956,7 @@ public class ColorPicker extends JPanel {
 		public Option(String text,int max) {
 			spinner = new JSpinner(new SpinnerNumberModel(0,0,max,5));
 			spinner.addChangeListener(changeListener);
-
+			
 			/*this tries out Tim Boudreaux's new slider UI.
 			* It's a good UI, but I think for the ColorPicker
 			* the numeric controls are more useful.
@@ -955,11 +971,11 @@ public class ColorPicker extends JPanel {
 			//slider = new JSlider(0,max);
 			//slider.addChangeListener(changeListener);
 			//slider.setUI(new org.netbeans.paint.api.components.PopupSliderUI());
-
+				
 			label = new JLabel(text);
 			radioButton.addActionListener(actionListener);
 		}
-
+		
 		public void setValue(int i) {
 			if(slider!=null) {
 				slider.setValue(i);
@@ -968,36 +984,36 @@ public class ColorPicker extends JPanel {
 				spinner.setValue(new Integer(i));
 			}
 		}
-
+		
 		public int getMaximum() {
 			if(slider!=null)
 				return slider.getMaximum();
 			return ((Number) ((SpinnerNumberModel)spinner.getModel()).getMaximum() ).intValue();
 		}
-
+		
 		public boolean contains(Object src) {
 			return (src==slider || src==spinner || src==radioButton || src==label);
 		}
-
+		
 		public float getFloatValue() {
 			return getIntValue();
 		}
-
+		
 		public int getIntValue() {
 			if(slider!=null)
 				return slider.getValue();
 			return ((Number)spinner.getValue()).intValue();
 		}
-
+		
 		public boolean isVisible() {
 			return label.isVisible();
 		}
-
+		
 		public void setVisible(boolean b) {
 			boolean radioButtonsAllowed = true;
 			Boolean z = (Boolean)getClientProperty(MODE_CONTROLS_VISIBLE_PROPERTY);
 			if(z!=null) radioButtonsAllowed = z.booleanValue();
-
+			
 			radioButton.setVisible(b && radioButtonsAllowed);
 			if(slider!=null)
 				slider.setVisible(b);
